--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,17 +1,18 @@
-body {
-    margin: 0;
-    
+body { 
+margin: 0;
+padding: 0;
 }
+
+
+/*################################################Navigation#################################################################*/
 
 .nav {
     position:fixed;
     top:0px;
     left:0px;
-    width:100%;
-    
+    width:100%;  
+    z-index: 999999; 
 }
-
-
 
 /* Цвет навигации */
 .topnav {
@@ -33,12 +34,11 @@ body {
     padding: 20px 30px;
     text-decoration: none;
     font-size: 17px;
-    
 }
 
 /* цвет ссылок при наведении */
-.topnav a:hover {
-    background-color: rgb(195, 192, 192);
+.topnav a:hover:not(.navbar-brand) {
+    background-color: rgb(236, 234, 234);
     color: black;
 }
 
@@ -53,8 +53,213 @@ a:active {
     display: none;
 }
 
+.navbar-brand {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+/*########################################################################################################################*/
+
+/*####################################################Slider####################################################################*/
+
+#home{
+    margin-top: 0;
+}
+
+
+.carousel {
+  width: 100%;
+  height: 660px;
+  border-radius: 3px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  
+  
+}
+  .carousel:hover .controls {
+    opacity: 1;
+  }
+  
+  .controls {
+    opacity: 0;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    justify-content: space-between;
+    width: 100%;
+    z-index: 99999;
+    transition: all ease 0.5s;
+  }
+    .control {
+      margin: 0 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 40px;
+      width: 40px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.7);
+      opacity: .5;
+      transition: ease .5s;
+      cursor: pointer;
+    }  
+    .control:hover {
+        opacity: 1;
+      }
+    
+  
+  
+    .slides {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+      display: flex;
+      width: 100%;
+      transition: 1s ease-in-out all;
+    }  
+    .slide {
+        min-width: 100%;
+        min-height: 300px;
+        height: auto;
+        
+        
+      }
+    
+      .slide img {
+          width: 100%;
+          opacity: 0.8;
+      }
+
+      .img1  #mountin,
+      .img2  #europe{
+       position: absolute;
+       color: black;
+       font-size: 24px;
+       top: 50%;
+       left: 60px;
+      }
+/*########################################################################################################################*/
+#feature {
+    width: 100%;
+    height: 650px;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10%;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+
+.feature-thumb {
+    width: 20%;
+    height: auto;
+    border: 1px solid #f0f0f0;
+    padding: 5em 3em;
+    
+}
+
+.feature-thumb:hover {
+    background: #eee;
+}
+
+.feature-thumb  span {
+    background: #3f51b5;
+    border-radius: 50px;
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: bold;
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.feature-thumb p {
+    color: #757575;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 24px;
+}
+
+.feature-thumb h3 {
+    color: #454545;
+}
+
+
+/*########################################################################################################################*/
 #contact {
-    margin-top: 1000px;
+    width: 100%;
+    height: 600px;
+    font-family: 'Lato', sans-serif;
+}
+
+
+
+form {
+    width: 30%;
+}
+
+
+.section-form {
+  width: 30%;
+  margin: 1em auto;
+  background-color: #f3efe7;
+  padding: 1em;
+  font-size: 1.6em;
+}
+  .intro {
+    margin-bottom: 0.8em;
+  }
+  
+  h1 {
+    text-align: center;
+    font-size: 1em;
+    margin-bottom: 0.2em;
+  }
+  
+  h2 {
+    text-align: center;
+    font-size: 0.8em;
+  } 
+
+
+input[type=text] {
+  height: 20px; 
+}
+
+input[type=text], textarea {
+  width: 80%;
+  margin-bottom: 1em;
+  margin: 15px;
+  font-size: .8em;
+  color:#cfcece;
+  padding: .5em ;
+  border: none;
+  color: #555555;
+  
+}
+
+input[type=button] {
+  cursor: pointer;
+  margin: 0;
+  padding: .5em 2em;
+  background: #636363;
+  border: none;
+  color: #fff;
+  font-size: 1em;
+  font-weight: 400;
+}
+
+fieldset {
+    width: 100%;
 }
 
 
@@ -71,8 +276,7 @@ a:active {
 
 
 
-
-
+/*########################################################################################################################*/
 
 
 
@@ -80,7 +284,6 @@ a:active {
 
 
 /* Если ширина экрана меньше 600 пикселей, скрыть все ссылки, кроме первой («Домой»). Показать ссылку, которая должна открывать и закрывать topnav (.icon) */
-
 @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
