--- a/public/styles/callback_btn.css
+++ b/public/styles/callback_btn.css
@@ -18,6 +18,14 @@
     content: "\f093";
 }
 
+.img_phone:active {
+    transform: scale(.9);
+}
+
+.img_phone:hover {
+    opacity: .8;
+}
+
 .ringring {
     border: 3px solid #4a97f0;
     border-radius: 30px;
@@ -33,9 +41,10 @@
 
 .phone {
     position: relative;
-    left: 50%;
-    top: 7px;
-
+    text-align: left;
+    left: -10%;
+    top: 0;
+    
 }
 
 @keyframes scaling {
